# jasper

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: app.rs  config.rs  dispatcher.rs  main.rs  module_manager.rs
src/modules/: mod.rs
src/modules/admin/: member_manager.rs  mod.rs
src/modules/chat/: mod.rs
src/modules/preferences/: mod.rs  preferences_manager.rs
src/modules/stats/: mod.rs  stats_manager.rs
src/utils/: mod.rs
