[package]
name = "ollama-telegram-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12.15", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
teloxide = { version = "0.12.2", features = ["macros"] }
log = "0.4.21"
pretty_env_logger = "0.5.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
reqwest = { version = "0.12.4", features = ["json"] }
surf = "2.3.2"
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.82"
serde_json = "1.0.116"
serde = "1.0.200"
paste = "1.0.14"
env_logger = "0.11.3"
futures = "0.3.30"
pin-project-lite = "0.2.14"
async-trait = "0.1.80"
braille = "1.0.3"
